--- a/extra/xros_over/setup.cfg
+++ b/extra/xros_over/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = xros_over
-version = 0.1.0
+version = 0.1.0a3
 url = https://github.com/hankei6km/xrosfs
 author = hankei6km
 author_email = hankei6km@gmail.com
