--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = xrosfs
-version = 0.1.0.a4
+version = 0.1.0
 url = https://github.com/hankei6km/xrosfs
 author = hankei6km
 author_email = hankei6km@gmail.com
