--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,34 @@
 sudo: required
 services:
   - docker
-# before_install:
-#   - bash bench_test/before_isntall.sh
+before_install:
+  - docker pull hankei6km/xrosfs-bench:0.1.0-stretch-slim
+  - docker pull hankei6km/xrosfs-bench:0.1.0-centos
 
 language: python
 python:
   - "3.5"
+  - "3.6"
+addons:
+  apt:
+    packages:
+      - fuse  
+      - sshfs  
 install:
   - pip install flake8
+env:
+  - XROSFS_BENCH_AVOID_RNAME_DIR=1
 script:
   - python setup.py test
   - flake8
+  - sudo sh -c 'echo "user_allow_other" >> /etc/fuse.conf' && sudo chmod a+r /etc/fuse.conf
+  - umask 0022
+  - bench_test/bootstrap.sh hankei6km/xrosfs-bench:0.1.0-stretch-slim
+  - bench_test/bootstrap.sh hankei6km/xrosfs-bench:0.1.0-centos
+  - XROSFS_BENCH_XROSFS_MOUNT_OPTS="-o umask=0002" XROSFS_BENCH_SSHFS_MOUNT_OPTS="-o umask=0002" bench_test/bootstrap.sh hankei6km/xrosfs-bench:0.1.0-stretch-slim
+  - XROSFS_BENCH_XROSFS_MOUNT_OPTS="-o umask=0002" XROSFS_BENCH_SSHFS_MOUNT_OPTS="-o umask=0002" bench_test/bootstrap.sh hankei6km/xrosfs-bench:0.1.0-centos
+  - XROSFS_BENCH_XROSFS_MOUNT_OPTS="-o umask=0027" XROSFS_BENCH_SSHFS_MOUNT_OPTS="-o umask=0027" bench_test/bootstrap.sh hankei6km/xrosfs-bench:0.1.0-stretch-slim
+  - XROSFS_BENCH_XROSFS_MOUNT_OPTS="-o umask=0027" XROSFS_BENCH_SSHFS_MOUNT_OPTS="-o umask=0027" bench_test/bootstrap.sh hankei6km/xrosfs-bench:0.1.0-centos
 notifications:
   email:
     - hankei6km+travis@gmail.com
